--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 
 <body>
-    <img src=".//Practice/my resume/images/kanishk1.jpeg" alt="Kanishk Chaurasia">
+    <img src="./kanishk1.jpeg" alt="Kanishk Chaurasia">
     <h1>Kanishk Chaurasia</h1>
     <p>I am currently a student and learning Web Development. Soon, I will get a job as a web Developer
         Thanks for my visiting profile.</p>
